<resources>
    <string name="app_name">BachApp</string>

    <string name="bachApp">BachApp</string>
    <string name="action_settings">Configuraciones</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_signup">Sign Up</string>

    <string name="registro">Registrate!</string>
    <string name="cliente">Cliente</string>
    <string name="bachaquero">Bachaquero</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_dashboard">Inicio</string>

    <string name="title_activity_client">BachApp</string>
    <string name="action_listar">Listar</string>
    <string name="title_activity_product">Producto</string>
    <string name="busqueda">Buscar...</string>
    <string name="action_search">Buscar</string>
    <string name="title_activity_maps_products">Ubicacion de Productos</string>
    <string name="action_map">Mapa</string>
    <string name="title_activity_settings">Configuraciones</string>
    <string name="new_password">New Password</string>
    <string name="confirmation">Repeat new password</string>
    <string name="guardar">Guardar cambios</string>
    <string name="title_activity_bacha_product">BachaProductActivity</string>
    <string name="title_activity_add_product">Agregar Producto</string>
    <string name="scan">Scanear Producto</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripcion</string>
    <string name="agregar">Agregar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_activity_edit_product">Editar Producto</string>
    <string name="action_logout">Logout</string>
    <string name="otros">Otros productos del bachaquero</string>
    <string name="title_activity_settings_bach">Configuraciones</string>

    <string name="hello_world">Hello world!</string>
</resources>
