<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".MainActivity"
    android:background="#12a5f4">

    <TextView
        android:text="@string/bachApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp">

        <EditText
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/email"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF" />

        <EditText
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup"
            android:id="@+id/signup"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:textSize="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:id="@+id/login"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF"
            />
    </LinearLayout>

</RelativeLayout>
