<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.holamundo.gabocst.holamundo.AddProductActivity"
    android:background="#1fb1f4">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/et2"
        android:layout_marginTop="35dp"
        android:hint="@string/descripcion"
        android:layout_below="@+id/et1"
        android:layout_alignLeft="@+id/et1"
        android:layout_alignStart="@+id/et1"
        android:maxLines="3"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scan_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/et2"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="22dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:id="@+id/agregar"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:id="@+id/scan_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:background="#FFFFFF"
        android:textColor="#000000" />




</RelativeLayout>
