<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.holamundo.gabocst.holamundo.EditProductActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/et2"
        android:layout_marginTop="68dp"
        android:hint="@string/descripcion"
        android:maxLines="3"
        android:layout_below="@+id/et1"
        android:layout_alignLeft="@+id/et1"
        android:layout_alignStart="@+id/et1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="105dp" />

</RelativeLayout>
